--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
         <!-- Navbar -->
         <section>
             <div class="header">
-                <div><img src="/images/header-logo.png" style="height: 40px;" alt="logo" /></div>
+                <div><img src="./images/header-logo.png" style="height: 40px;" alt="logo" /></div>
                 <div class="hamburger"><i class="fas fa-bars"></i> </div>
             </div>
             <div class="navbar">
@@ -60,7 +60,7 @@
 
         <div class="about">
             <div class="sub-about">
-                <img src="/images/about-us.jpg" style="width: 100%;" alt="about-us" />
+                <img src="./images/about-us.jpg" style="width: 100%;" alt="about-us" />
             </div>
             <div class="sub-about" style=" padding: 20px">
                 <h1>Phasellus vel interdum elit</h1>
@@ -124,7 +124,7 @@
         <!-- Footer -->
         <section>
             <div style="display: flex; justify-content: center;padding: 25px;">
-                <img src="/images/header-logo.png" style="height: 40px;" alt="logo" />
+                <img src="./images/header-logo.png" style="height: 40px;" alt="logo" />
             </div>
             <div style="display: flex; justify-content: center;">
                 <div style="display: flex; justify-content: space-around; width: 800px; padding: 25px;">
