--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <section>
             <div class="header">
-                <div><img src="/images/header-logo.png" style="height: 40px;" alt="logo" /></div>
+                <div><img src="./images/header-logo.png" style="height: 40px;" alt="logo" /></div>
                 <div class="hamburger"><i class="fas fa-bars"></i> </div>
             </div>
             <div class="navbar">
@@ -31,7 +31,7 @@
         <!-- Hero Section-->
         <section>
             <div style="position: relative">
-                <div style="background-image: url('/images/banner-bg.jpg'); width: 100vw; height: 100vh; background-size: cover;
+                <div style="background-image: url('./images/banner-bg.jpg'); width: 100vw; height: 100vh; background-size: cover;
                 background-position: center;">
                     <div class="hero-content"
                         style="background-color: rgba(255, 255, 255, 0.589); width: 400px ;  position: absolute; top: 20%; left: 15%; padding: 50px; border-radius: 1%;">
@@ -68,7 +68,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-01.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-01.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -79,7 +79,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-02.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-02.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -90,7 +90,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-03.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-03.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -101,7 +101,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-04.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-04.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -149,7 +149,7 @@
         <!-- Footer -->
         <section>
             <div style="display: flex; justify-content: center;padding: 25px;">
-                <img src="/images/header-logo.png" style="height: 40px;" alt="logo" />
+                <img src="./images/header-logo.png" style="height: 40px;" alt="logo" />
             </div>
             <div style="display: flex; justify-content: center;">
                 <div style="display: flex; justify-content: space-around; width: 800px; padding: 25px;">
