--- a/products.html
+++ b/products.html
@@ -15,7 +15,7 @@
         <!-- Navbar -->
         <section>
             <div class="header">
-                <div><img src="/images/header-logo.png" style="height: 40px;" alt="logo" /></div>
+                <div><img src="./images/header-logo.png" style="height: 40px;" alt="logo" /></div>
                 <div class="hamburger"><i class="fas fa-bars"></i> </div>
             </div>
             <div class="navbar">
@@ -39,7 +39,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-01.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-01.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -50,7 +50,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-02.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-02.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -61,7 +61,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-03.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-03.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -72,7 +72,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-04.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-04.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -83,7 +83,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-05.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-05.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -94,7 +94,7 @@
                 <div
                     style="width: 100% ;padding: 10px; border: 1px solid rgba(0, 0, 0, 0.2); margin: 0px auto; border-radius: 2%;">
                     <div>
-                        <img src="/images/product-06.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
+                        <img src="./images/product-06.jpg" style="width: 100%; margin: 0px auto;" alt="product-01" />
                     </div>
                     <div>
                         <h3>Proin vel ligula</h3>
@@ -154,7 +154,7 @@
         <!-- Footer -->
         <section>
             <div style="display: flex; justify-content: center;padding: 25px;">
-                <img src="/images/header-logo.png" style="height: 40px;" alt="logo" />
+                <img src="./images/header-logo.png" style="height: 40px;" alt="logo" />
             </div>
             <div style="display: flex; justify-content: center;">
                 <div style="display: flex; justify-content: space-around; width: 800px; padding: 25px;">
