--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
             <div class="navbar">
                 <div style="display: flex; justify-content: space-around; width: 800px; padding: 25px;">
                     <div style="color: #458BCD"><b><a href="/">HOME</a></b></div>
-                    <div><b><a href="/products.html">PRODUCTS</a></b></div>
-                    <div><b><a href="/about.html">ABOUT US</a></b></div>
-                    <div><b><a href="/contactus.html">CONTACT US</a></b></div>
+                    <div><b><a href="/Assignment-8---HTML-CSS/products.html">PRODUCTS</a></b></div>
+                    <div><b><a href="/Assignment-8---HTML-CSS/about.html">ABOUT US</a></b></div>
+                    <div><b><a href="/Assignment-8---HTML-CSS/contactus.html">CONTACT US</a></b></div>
                 </div>
             </div>
         </section>
