--- a/products.html
+++ b/products.html
@@ -20,7 +20,7 @@
             </div>
             <div class="navbar">
                 <div style="display: flex; justify-content: space-around; width: 800px; padding: 25px;">
-                    <div><b><a href="/Assignment-8---HTML-CSS/index.html">HOME</a></b></div>
+                    <div><b><a href="https://talha-shahid.github.io/Assignment-8---HTML-CSS/">HOME</a></b></div>
                     <div style="color: #458BCD"><b><a href="/Assignment-8---HTML-CSS/products.html">PRODUCTS</a></b></div>
                     <div><b><a href="/Assignment-8---HTML-CSS/about.html">ABOUT US</a></b></div>
                     <div><b><a href="/Assignment-8---HTML-CSS/contactus.html">CONTACT US</a></b></div>
